<resources>
    <string name="app_name">ProductApp</string>

    <string name="internet_connectivity_fail">No Internet Connection…</string>
    <string name="internet_connectivity_success">Back Online!</string>
    <string name="menu_search">Search</string>
    <string name="anonymous_user">Anonymous User</string>
    <string name="empty_field">Please do not leave this field blank.</string>
    <string name="empty_rating">Please select a rating.</string>
    <string name="product_deleted">Product deleted.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="comment">Comment</string>
    <string name="product_id">Product ID</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="delete_product_title">Delete Product</string>
    <string name="delete_product_description">Are you sure you want to delete this product?</string>
    <string name="add_product">Add Product</string>
    <string name="product_added">Product added.</string>

</resources>